--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -19,7 +19,8 @@
   - [5.3. EPT异常处理流程](#53-ept异常处理流程)
     - [5.3.1. EPT异常处理入口](#531-ept异常处理入口)
     - [5.3.2. kvm_tdp_page_fault(): 建立页表项](#532-kvm_tdp_page_fault-建立页表项)
-      - [5.3.2.1. for_each_shadow_entry](#5321-for_each_shadow_entry)
+      - [5.3.2.1. kvm_mmu_page: 创建页](#5321-kvm_mmu_page-创建页)
+      - [5.3.2.2. for_each_shadow_entry: 遍历EPT页表项](#5322-for_each_shadow_entry-遍历ept页表项)
 - [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
@@ -545,9 +546,9 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |           ├─ handle_abnormal_pfn();   // 处理反常的物理页
  |   |   |   |           └─ __direct_map();   // 完成EPT页表的构造，并在最后一级页表项中将gfn同pfn映射起来
  |   |   |   |               ├─ level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);   // 获取到该gfn对应的level, 基于vcpu->kvm->mm(qemu的mm_struct)
- |   |   |   |               ├─ for_each_shadow_entry(vcpu, gpa, it);   // 遍历EPT页表 
+ |   |   |   |               ├─ for_each_shadow_entry(vcpu, gpa, it);   // 遍历EPT页表
  |   |   |   |               ├─ it.level == level: break;   //  如果页表的level等于请求的level, 表明是该entry引起的violation(说明到了叶子节点), 跳出
- |   |   |   |               ├─ sp = kvm_mmu_get_page();   // 分配当前entry的下一级(level-1, 指向的页表)页表的kvm_mmu_page(sp)
+ |   |   |   |               ├─ sp = kvm_mmu_get_page();   // 对于非叶子节点, 如果该entry指向的页表 分配当前entry的下一级(level-1, 指向的页表)页表的kvm_mmu_page(sp)
  |   |   |   |               ├─ link_shadow_page(vcpu, it.sptep, sp);   // 将分配的下一级页表链接到当前entry
  |   |   |   |           |   └─ mmu_set_spte();   // 设置spte
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
@@ -889,13 +890,13 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
 如果**level不相等**，就进入后面的if判断，这是判断**该entry**对应的**下一级页是否存在**，如果**不存在**需要**重新构建**，**存在**就**直接向后遍历**，即对比二级页表中的entry。
 
-整个处理流程就是这样，根据**GPA**组**逐层查找EPT**，最终**level相等！！！** 的时候，就根据**最后一层的索引**定位一个**PTE**，**该PTE**应该指向的就是**GFN对应的PFN**，那么这时候**set spte**就可以了。**最好的情况**就是**最后一级页表**中的entry指向的物理页被换出外磁盘，这样只需要处理一次EPT violation，而如果在初始全部为空的状态下访问，每一级的页表都需要重新构建，则需要处理四次EPTviolation，发生4次`VM-exit`。
+整个处理流程就是这样，根据**GPA**组**逐层查找EPT**，最终**level相等！！！** 的时候，就根据**最后一层的索引**定位一个**PTE**，**该PTE**应该指向的就是**GFN对应的PFN**，那么这时候**set spte**就可以了。**最好的情况**就是**最后一级页表**中的**entry指向的物理页**被换出外磁盘，这样只需要处理一次EPT violation，而如果在初始全部为空的状态下访问，**每一级的页表**都需要**重新构建**，则需要处理四次EPTviolation，发生4次`VM-exit`。
 
-构建页表的过程即在level相等之前，发现需要的某一级的页表项为NULL，就调用`kvm_mmu_get_page`获取一个page，然后调用`link_shadow_page`设置页表项指向page
+对**非叶子节点** (**level相等之前**), 发现需要的某一级的页表项为NULL, 就调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中(即设置页表项指向这个page)。
 
-对**非叶子节点**的处理调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中。
+**一直到叶子节点**, 对于**叶子节点**，则**直接调用** `mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
 
-对于**叶子节点**，则**直接调用** `mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
+#### 5.3.2.1. kvm_mmu_page: 创建页
 
 `kvm_mmu_get_page`函数是**创建mmu页结构**的函数，在该函数主要流程如下：
 
@@ -1010,7 +1011,7 @@ out:
 
 这样看每次缺页都会分配新的mmu page，虚拟机每次启动是根据guest不停的进行`EXIT_REASON_EPT_VIOLATION`，整个页表就建立起来了。
 
-#### 5.3.2.1. for_each_shadow_entry
+#### 5.3.2.2. for_each_shadow_entry: 遍历EPT页表项
 
 ```cpp
 #define for_each_shadow_entry(_vcpu, _addr, _walker)            \
@@ -1076,7 +1077,7 @@ static void shadow_walk_init_using_root(struct kvm_shadow_walk_iterator *iterato
 struct kvm_shadow_walk_iterator {
     u64 addr;//寻找的GuestOS的物理地址，即(u64)gfn << PAGE_SHIFT  
     hpa_t shadow_addr;//指向下一个要找的EPT页表基地址
-    u64 *sptep;//指向当前页表项地址
+    u64 *sptep;//指向当前页表项地址, 为0代表下一级为空
     int level;//当前查找所处的页表级别
     unsigned index;//对应于addr的表项在当前页表的索引
 };
