--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -548,7 +548,7 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |               ├─ level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);   // 获取到该gfn对应的level, 基于vcpu->kvm->mm(qemu的mm_struct)
  |   |   |   |               ├─ for_each_shadow_entry(vcpu, gpa, it);   // 遍历EPT页表
  |   |   |   |               ├─ it.level == level: break;   //  如果页表的level等于请求的level, 表明是该entry引起的violation(说明到了叶子节点), 跳出
- |   |   |   |               ├─ sp = kvm_mmu_get_page();   // 对于非叶子节点, 如果该entry指向的页表 分配当前entry的下一级(level-1, 指向的页表)页表的kvm_mmu_page(sp)
+ |   |   |   |               ├─ sp = kvm_mmu_get_page();   // 对于非叶子节点, 如果该entry页表项值为0, 表明下一级页表页不存在, 则分配当前entry的下一级(level-1, 指向的页表)页表的kvm_mmu_page(sp)
  |   |   |   |               ├─ link_shadow_page(vcpu, it.sptep, sp);   // 将分配的下一级页表链接到当前entry
  |   |   |   |           |   └─ mmu_set_spte();   // 设置spte
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
@@ -874,7 +874,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                                 account_huge_nx_page(vcpu->kvm, sp);
                 }
         }
-        // 设置pte，页表下一级的page地址就是pfn(HPA)写入到pte
+        // 叶子节点, 设置pte，page地址(pfn, HPA)写入到pte
         ret = mmu_set_spte(vcpu, it.sptep, ACC_ALL,
                            write, level, base_gfn, pfn, prefault,
                            map_writable);
@@ -1077,7 +1077,7 @@ static void shadow_walk_init_using_root(struct kvm_shadow_walk_iterator *iterato
 struct kvm_shadow_walk_iterator {
     u64 addr;//寻找的GuestOS的物理地址，即(u64)gfn << PAGE_SHIFT  
     hpa_t shadow_addr;//指向下一个要找的EPT页表基地址
-    u64 *sptep;//指向当前页表项地址, 为0代表下一级为空
+    u64 *sptep;//指向当前页表项地址, 表项值为0代表下一级为空
     int level;//当前查找所处的页表级别
     unsigned index;//对应于addr的表项在当前页表的索引
 };
