--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -19,7 +19,7 @@
   - [5.3. EPT异常处理流程](#53-ept异常处理流程)
     - [5.3.1. EPT异常处理入口](#531-ept异常处理入口)
     - [5.3.2. kvm_tdp_page_fault(): 建立页表项](#532-kvm_tdp_page_fault-建立页表项)
-      - [5.3.2.1. kvm_mmu_page: 创建页](#5321-kvm_mmu_page-创建页)
+      - [5.3.2.1. kvm_mmu_page: 创建页表页](#5321-kvm_mmu_page-创建页表页)
       - [5.3.2.2. for_each_shadow_entry: 遍历EPT页表项](#5322-for_each_shadow_entry-遍历ept页表项)
 - [6. 参考](#6-参考)
 
@@ -542,7 +542,7 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |           |        ├─ addr = __gfn_to_hva_many();   // 得到该gfn(虚拟机页框号)对应的qemu中分配的页面的HVA
  |   |   |   |           |        |   └─ return __gfn_to_hva_memslot();
  |   |   |   |           |        |       └─ return slot->userspace_addr + (gfn - slot->base_gfn) * PAGE_SIZE; // 这是gfn(虚拟机页框号)转换成主机虚拟地址(hva)
- |   |   |   |           |        └─ return hva_to_pfn(); // 得到这个主机虚拟地址(HVA)的主机物理页框号(HPA), 当然这只是一个PFN, 还需要PF完成真正页面的分配
+ |   |   |   |           |        └─ return hva_to_pfn(); // 得到这个主机虚拟地址(HVA)的主机物理页框号(HPA), 当然这只是一个PFN, 还需要PF完成真正页面的分配, 如果HVA对应的地址并不在内存中，还需要HOST自己处理缺页中断。
  |   |   |   |           ├─ handle_abnormal_pfn();   // 处理反常的物理页
  |   |   |   |           └─ __direct_map();   // 完成EPT页表的构造，并在最后一级页表项中将gfn同pfn映射起来
  |   |   |   |               ├─ level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);   // 获取到该gfn对应的level, 基于vcpu->kvm->mm(qemu的mm_struct)
@@ -823,7 +823,7 @@ out_unlock:
 
 接着调用了`fast_page_fault`尝试快速处理violation，只有当GFN对应的物理页存在且violation是由读写操作引起的，才可以使用快速处理，因为这样不用加`MMU-lock`.
 
-假设这里**不能快速处理**，那么到后面就调用`try_async_pf`函数根据**GFN**获取对应的**PFN**，这个过程具体来说需要首先获取GFN对应的slot，转化成HVA，接着就是**正常的HOST地址翻译的过程**了，如果HVA对应的地址并不在内存中，还需要**HOST自己处理缺页中断**。
+假设这里**不能快速处理**，那么到后面就调用`try_async_pf`函数根据**GFN**获取对应的**PFN**，这个过程具体来说需要首先获取**GFN对应的slot**，转化成**HVA**，接着就是**正常的HOST地址翻译的过程**了，如果**HVA对应的地址并不在内存**中，还需要**HOST自己处理缺页中断**。
 
 `__direct_map()`是构建页表的核心函数, 
 
@@ -896,7 +896,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
 **一直到叶子节点**, 对于**叶子节点**，则**直接调用** `mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
 
-#### 5.3.2.1. kvm_mmu_page: 创建页
+#### 5.3.2.1. kvm_mmu_page: 创建页表页
 
 `kvm_mmu_get_page`函数是**创建mmu页结构**的函数，在该函数主要流程如下：
 
