--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -19,8 +19,9 @@
   - [5.3. EPT异常处理流程](#53-ept异常处理流程)
     - [5.3.1. EPT异常处理入口](#531-ept异常处理入口)
     - [5.3.2. kvm_tdp_page_fault(): 建立页表项](#532-kvm_tdp_page_fault-建立页表项)
-      - [5.3.2.1. kvm_mmu_page: 创建页表页](#5321-kvm_mmu_page-创建页表页)
-      - [5.3.2.2. for_each_shadow_entry: 遍历EPT页表项](#5322-for_each_shadow_entry-遍历ept页表项)
+      - [5.3.2.1. __direct_map(): 构建页表核心](#5321-__direct_map-构建页表核心)
+      - [5.3.2.2. kvm_mmu_page: 创建页表页](#5322-kvm_mmu_page-创建页表页)
+      - [5.3.2.3. for_each_shadow_entry: 遍历EPT页表项](#5323-for_each_shadow_entry-遍历ept页表项)
 - [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
@@ -542,7 +543,7 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |           |        ├─ addr = __gfn_to_hva_many();   // 得到该gfn(虚拟机页框号)对应的qemu中分配的页面的HVA
  |   |   |   |           |        |   └─ return __gfn_to_hva_memslot();
  |   |   |   |           |        |       └─ return slot->userspace_addr + (gfn - slot->base_gfn) * PAGE_SIZE; // 这是gfn(虚拟机页框号)转换成主机虚拟地址(hva)
- |   |   |   |           |        └─ return hva_to_pfn(); // 得到这个主机虚拟地址(HVA)的主机物理页框号(HPA), 当然这只是一个PFN, 还需要PF完成真正页面的分配, 如果HVA对应的地址并不在内存中，还需要HOST自己处理缺页中断。
+ |   |   |   |           |        └─ return hva_to_pfn(); // 得到这个主机虚拟地址(HVA)的主机物理页框号(HPA), 当然这只是一个PFN, 还需要PF完成真正页面的分配, 如果HVA对应的地址并不在内存中，还需要HOST自己处理缺页中断
  |   |   |   |           ├─ handle_abnormal_pfn();   // 处理反常的物理页
  |   |   |   |           └─ __direct_map();   // 完成EPT页表的构造，并在最后一级页表项中将gfn同pfn映射起来
  |   |   |   |               ├─ level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);   // 获取到该gfn对应的level, 基于vcpu->kvm->mm(qemu的mm_struct)
@@ -825,6 +826,8 @@ out_unlock:
 
 假设这里**不能快速处理**，那么到后面就调用`try_async_pf`函数根据**GFN**获取对应的**PFN**，这个过程具体来说需要首先获取**GFN对应的slot**，转化成**HVA**，接着就是**正常的HOST地址翻译的过程**了，如果**HVA对应的地址并不在内存**中，还需要**HOST自己处理缺页中断**。
 
+#### 5.3.2.1. __direct_map(): 构建页表核心
+
 `__direct_map()`是构建页表的核心函数, 
 
 ```cpp
@@ -896,7 +899,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
 **一直到叶子节点**, 对于**叶子节点**，则**直接调用** `mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
 
-#### 5.3.2.1. kvm_mmu_page: 创建页表页
+#### 5.3.2.2. kvm_mmu_page: 创建页表页
 
 `kvm_mmu_get_page`函数是**创建mmu页结构**的函数，在该函数主要流程如下：
 
@@ -1011,7 +1014,7 @@ out:
 
 这样看每次缺页都会分配新的mmu page，虚拟机每次启动是根据guest不停的进行`EXIT_REASON_EPT_VIOLATION`，整个页表就建立起来了。
 
-#### 5.3.2.2. for_each_shadow_entry: 遍历EPT页表项
+#### 5.3.2.3. for_each_shadow_entry: 遍历EPT页表项
 
 ```cpp
 #define for_each_shadow_entry(_vcpu, _addr, _walker)            \
@@ -1076,10 +1079,12 @@ static void shadow_walk_init_using_root(struct kvm_shadow_walk_iterator *iterato
 ```cpp
 struct kvm_shadow_walk_iterator {
     u64 addr;//寻找的GuestOS的物理地址，即(u64)gfn << PAGE_SHIFT  
-    hpa_t shadow_addr;//指向下一个要找的EPT页表基地址
+    hpa_t shadow_addr;// 指向下一个要找的EPT页表基地址
+    // sptep不是下一级页表的基地址，而是当前页表中要使用的表项，而该表项中含有下一级表项的基地址
+    // 更新的时候，需要向sptep中填入下一级表项物理地址或HPA物理地址
     u64 *sptep;//指向当前页表项地址, 表项值为0代表下一级为空
     int level;//当前查找所处的页表级别
-    unsigned index;//对应于addr的表项在当前页表的索引
+    unsigned index;//对应于gaddr的表项在当前页表的索引
 };
 ```
 
@@ -1135,3 +1140,5 @@ static void __shadow_walk_next(struct kvm_shadow_walk_iterator *iterator,
 # 6. 参考
 
 https://www.cnblogs.com/ck1020/p/6043054.html
+
+https://blog.csdn.net/leoufung/article/details/52661968?depth_1-utm_source=distribute.pc_relevant.none-task&utm_source=distribute.pc_relevant.none-task
