--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -866,6 +866,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                  */
                 disallowed_hugepage_adjust(it, gfn, &pfn, &level);
                 // 得到虚拟机物理页帧号, 确保对应层级的偏移部分为0，如level=1，则baseaddr的低12位就清零
+                // KVM_PAGES_PER_HPAGE(level)按照上面的分析，就是**大页**是**普通页面多少倍大小**，也就是对其关系；那么这里计算出来的`gfn`就是按照**大页倍数对齐后**的**起始gfn编号**
                 base_gfn = gfn & ~(KVM_PAGES_PER_HPAGE(it.level) - 1);
                 // entry的level和请求的level相等, 说明该entry引起的violation, 
                 // 即该entry对应的下级页或者页表不在内存中，或者直接为NULL。
