--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -21,10 +21,10 @@
     - [5.3.2. kvm_tdp_page_fault(): 建立页表项](#532-kvm_tdp_page_fault-建立页表项)
       - [5.3.2.1. __direct_map(): 构建页表核心](#5321-__direct_map-构建页表核心)
       - [5.3.2.2. kvm_mmu_page: 创建页表页](#5322-kvm_mmu_page-创建页表页)
-      - [通过gaddr来索引shadow page table (EPT)](#通过gaddr来索引shadow-page-table-ept)
-      - [5.3.2.3. 影子页表迭代器](#5323-影子页表迭代器)
-- [SPTE的设定](#spte的设定)
-- [6. 参考](#6-参考)
+    - [5.3.2.3. 通过gaddr来索引shadow page table (EPT)](#5323-通过gaddr来索引shadow-page-table-ept)
+    - [5.3.2.4. 影子页表迭代器](#5324-影子页表迭代器)
+- [6. SPTE的设定](#6-spte的设定)
+- [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
 
@@ -1034,7 +1034,7 @@ out:
 
 这样看每次缺页都会分配新的mmu page，虚拟机每次启动是根据guest不停的进行`EXIT_REASON_EPT_VIOLATION`，整个页表就建立起来了。
 
-#### 通过gaddr来索引shadow page table (EPT)
+### 5.3.2.3. 通过gaddr来索引shadow page table (EPT)
 
 在64位的机器上，同样GPA也是使用64bit宽度，但是目前intel使用了其中的48bit作为物理地址使用。当进行EPT的索引的时候，就像native页表的方法一样，将GPA按照9、9、9、9、12的宽度进行分段，每一个段作为一级shadow page table的索引值。
 
@@ -1091,7 +1091,7 @@ KVM代码中有相应的宏来计算MASK，用来对gaddr进行取整操作
 ```
 
 
-#### 5.3.2.3. 影子页表迭代器
+### 5.3.2.4. 影子页表迭代器
 
 通过 `kvm_shadow_walk_iterator` 结构，可以对影子页表进行迭代，其结构如下
 
@@ -1354,7 +1354,7 @@ static void __shadow_walk_next(struct kvm_shadow_walk_iterator *iterator,
 
 正如前面所说，此过程是**往后移动iterator的过程**，当level为`PT_PAGE_TABLE_LEVEL`即**1**的时候，此时应该**设置对应的页表**指向**对应的页**了，而**不需要再次往后遍历**，所以，就直接return，否则，需要往后移动iterator，设置**iterator**的`shadow_addr`和level。
 
-# SPTE的设定
+# 6. SPTE的设定
 
 另外，对于SPTE的设定，kvm中也提供了一些辅助函数
 
@@ -1367,7 +1367,7 @@ static void __shadow_walk_next(struct kvm_shadow_walk_iterator *iterator,
 
 
 
-# 6. 参考
+# 7. 参考
 
 https://www.cnblogs.com/ck1020/p/6043054.html
 
