--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -23,7 +23,7 @@
       - [5.3.2.2. kvm_mmu_page: 创建页表页](#5322-kvm_mmu_page-创建页表页)
     - [5.3.2.3. 通过gaddr来索引shadow page table (EPT)](#5323-通过gaddr来索引shadow-page-table-ept)
     - [5.3.2.4. 影子页表迭代器](#5324-影子页表迭代器)
-- [6. SPTE的设定](#6-spte的设定)
+- [6. SPTE设定的辅助函数](#6-spte设定的辅助函数)
 - [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
@@ -1354,7 +1354,7 @@ static void __shadow_walk_next(struct kvm_shadow_walk_iterator *iterator,
 
 正如前面所说，此过程是**往后移动iterator的过程**，当level为`PT_PAGE_TABLE_LEVEL`即**1**的时候，此时应该**设置对应的页表**指向**对应的页**了，而**不需要再次往后遍历**，所以，就直接return，否则，需要往后移动iterator，设置**iterator**的`shadow_addr`和level。
 
-# 6. SPTE的设定
+# 6. SPTE设定的辅助函数
 
 另外，对于SPTE的设定，kvm中也提供了一些辅助函数
 
