--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1064,7 +1064,9 @@ index4用来索引level 4影子页表的中的SPTE，index3用来索引level3级
 
 **每级页表**的**页表项**都会管理**一定宽度的物理地址空间**，比如**level 1级页表**的**每个页表项**就可以管理 `1<< 12` 大小的物理地址空间，这个宽度就是**页大小**
 
-**level 2 级页表**的**一个页表项**管理地址空间的大小就是  `1 << (12 + 9)` ，即`1 << (12 + (2  - 1) * 9)`
+**level 2 级页表**的**一个页表项**管理地址空间的大小就是  `1 << (12 + 9)` ，即
+
+`1 << (12 + (2  - 1) * 9)`
 
 =>  `1 << 12  + ( level - 1) * 9`
 
@@ -1089,7 +1091,6 @@ KVM代码中有相应的宏来计算MASK，用来对gaddr进行取整操作
 	(PT64_BASE_ADDR_MASK & ((1ULL << (PAGE_SHIFT + (((level) - 1) \
 						* PT64_LEVEL_BITS))) - 1))
 ```
-
 
 ### 5.3.2.4. 影子页表迭代器
 
