--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -493,7 +493,9 @@ index4用来索引level 4影子页表的中的SPTE，index3用来索引level3级
 
 **每个level级页表**的**页表项**内所管理的**地址**都是按照**大小对齐的**。
 
-**掩码**就是用于**对齐的位都是0**，其余位**都是1**。 `地址 & MASK`，得到的就是**该地址**的**level级页表**的**页表项**所管理地址**地址空间的起始地址**，该地址的大小是同level级页表的**页表项**管理地址**空间大小对齐**的
+**掩码**就是用于**对齐的位都是0**，其余位**都是1**。 
+
+`地址 & MASK`，得到的就是**该地址**的**level级页表**的**页表项**所管理地址**地址空间的起始地址**，该地址的大小是同level级页表的**页表项**管理地址**空间大小对齐**的
 
 KVM代码中有相应的宏来**计算MASK**，用来**对gaddr进行取整**操作
 
@@ -552,7 +554,7 @@ static int is_large_pte(u64 pte)
 static int is_last_spte(u64 pte, int level)
 {
     /*
-     * level = 1 可定是最后一个级别了，那么spte肯定是叶子页表页表项了，返回1
+     * level = 1 肯定是最后一个级别了，那么spte肯定是叶子页表页表项了，返回1
      */
 	if (level == PT_PAGE_TABLE_LEVEL)
 		return 1;
@@ -778,9 +780,9 @@ static void __shadow_walk_next(struct kvm_shadow_walk_iterator *iterator,
 
 代码中提供了辅助函数，可以帮助我们来建立EPT页表
 
-`mmu_set_spte`函数：用来设置影子页表项，这样就可以将PFN或者下一级页表的基地址填到SPTE中，当然，其中处理了复杂的addr的内容，刷新TLB、将spte加入gfn对应的ramp中
+`mmu_set_spte`函数：用来**设置影子页表项**，这样就可以将**PFN**或者**下一级页表**的**基地址**填到**SPTE**中，当然，其中处理了复杂的addr的内容，刷新TLB、将spte加入gfn对应的ramp中
 
-`link_shadow_page`函数：将新分配出来的下一级影子页表页的地址填写本级对应的SPTE中
+`link_shadow_page`函数：将新分配出来的**下一级影子页表页**的**地址**填写**本级对应的SPTE**中
 
 # 8. EPT构建过程
 
