--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1120,7 +1120,7 @@ static int direct_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
         r = mmu_topup_memory_caches(vcpu);
         if (r)
                 return r;
-        // 大页不开, 那就是4K页面, max_level是最后一级(叶子页表, 也就是其项指向页面的那一级)
+        // 大页不开, 那就是4K页面, max_level是最后一级(叶子页表, 也就是其项指向页面的那一级), 1
         if (lpage_disallowed)
                 max_level = PT_PAGE_TABLE_LEVEL;
         // 快速处理 violation
