--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -22,6 +22,8 @@
   - [8.3. EPT异常处理流程](#83-ept异常处理流程)
     - [8.3.1. EPT异常处理入口](#831-ept异常处理入口)
     - [8.3.2. kvm_tdp_page_fault(): 建立页表项](#832-kvm_tdp_page_fault-建立页表项)
+      - [fast_page_fault(): 快速处理](#fast_page_fault-快速处理)
+    - [try_async_pf(): GPA到HPA的转换](#try_async_pf-gpa到hpa的转换)
       - [8.3.2.1. __direct_map(): 构建页表核心](#8321-__direct_map-构建页表核心)
       - [8.3.2.2. kvm_mmu_page: 创建页表页](#8322-kvm_mmu_page-创建页表页)
 - [9. 参考](#9-参考)
@@ -1160,6 +1162,14 @@ out_unlock:
 接着调用了`fast_page_fault`尝试快速处理violation，只有当GFN对应的物理页存在且violation是由读写操作引起的，才可以使用快速处理，因为这样不用加`MMU-lock`.
 
 假设这里**不能快速处理**，那么到后面就调用`try_async_pf`函数根据**GFN**获取对应的**PFN**，这个过程具体来说需要首先获取**GFN对应的slot**，转化成**HVA**，接着就是**正常的HOST地址翻译的过程**了，如果**HVA对应的地址并不在内存**中，还需要**HOST自己处理缺页中断**。
+
+#### fast_page_fault(): 快速处理
+
+
+
+### try_async_pf(): GPA到HPA的转换
+
+
 
 #### 8.3.2.1. __direct_map(): 构建页表核心
 
