--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -24,9 +24,6 @@
     - [8.3.2. kvm_tdp_page_fault(): 建立页表项](#832-kvm_tdp_page_fault-建立页表项)
       - [fast_page_fault(): 快速处理](#fast_page_fault-快速处理)
     - [try_async_pf(): GPA到HPA的转换](#try_async_pf-gpa到hpa的转换)
-      - [8.3.2.1. __direct_map(): 构建页表核心](#8321-__direct_map-构建页表核心)
-      - [8.3.2.2. kvm_mmu_page: 创建页表页](#8322-kvm_mmu_page-创建页表页)
-- [9. 参考](#9-参考)
 
 <!-- /code_chunk_output -->
 
@@ -1169,7 +1166,19 @@ out_unlock:
 
 ### try_async_pf(): GPA到HPA的转换
 
+```cpp
+try_async_pf();   // 根据gfn, 在memslots中查找, 得到pfn, 主机物理页框号, HPA
+ ├─ slot = kvm_vcpu_gfn_to_memslot(vcpu, gfn);   // 得到该gfn(虚拟机页框号)对应的kvm_memory_slot
+ └─ *pfn = __gfn_to_pfn_memslot();   // 得到该gfn(虚拟机页框号)对应的pfn(主机物理页框号), 即GPA到HPA的转换
+      ├─ addr = __gfn_to_hva_many();   // 得到该gfn(虚拟机页框号)对应的qemu中分配的页面的HVA
+      |   └─ return __gfn_to_hva_memslot();
+      |       └─ return slot->userspace_addr + (gfn - slot->base_gfn) * PAGE_SIZE; // 这是gfn(虚拟机页框号)转换成主机虚拟地址(hva)
+      └─ return hva_to_pfn(); // 得到这个主机虚拟地址(HVA)的主机物理页框号(HPA), 当然这只是一个PFN, 还需要PF完成真正页面的分配, 如果HVA对应的地址并不在内存中，还需要HOST自己处理缺页中断
+ ```
 
+GPA到HPA的转化分两步完成，分别通过`gfn_to_hva`、`hva_to_pfn`两个函数完成。
+- `gfn_to_hva`首先确定**gpa**对应的**gfn**映射到哪一个`kvm_memory_slot`，通过`kvm_memory_slot`做一个**地址映射**(实际就是做一个线性的地址偏移，偏移大小为`(gfn - slot->base_gfn) * PAGE_SIZE)`，这样就得到了由**gfn到hva的映射**，实际获得的是GPA的客户物理页号到宿主虚拟地址的映射。
+- `hva_to_pfn`利用获得的gfn到hva的映射，完成宿主机上的虚拟地址(该虚拟地址为gfn对应的虚拟地址)到物理地址的转换，进而获得宿主机物理页框号pfn。此转换可能涉及宿主机物理页缺页，需要请求分配该页。
 
 #### 8.3.2.1. __direct_map(): 构建页表核心
 
