--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -23,7 +23,7 @@
     - [8.3.1. EPT异常处理入口](#831-ept异常处理入口)
     - [8.3.2. kvm_tdp_page_fault(): 建立页表项](#832-kvm_tdp_page_fault-建立页表项)
       - [fast_page_fault(): 快速处理](#fast_page_fault-快速处理)
-    - [try_async_pf(): GPA到HPA的转换](#try_async_pf-gpa到hpa的转换)
+      - [try_async_pf(): GPA到HPA的转换](#try_async_pf-gpa到hpa的转换)
 
 <!-- /code_chunk_output -->
 
@@ -1164,7 +1164,7 @@ out_unlock:
 
 
 
-### try_async_pf(): GPA到HPA的转换
+#### try_async_pf(): GPA到HPA的转换
 
 ```cpp
 try_async_pf();   // 根据gfn, 在memslots中查找, 得到pfn, 主机物理页框号, HPA
@@ -1177,8 +1177,8 @@ try_async_pf();   // 根据gfn, 在memslots中查找, 得到pfn, 主机物理页
  ```
 
 GPA到HPA的转化分两步完成，分别通过`gfn_to_hva`、`hva_to_pfn`两个函数完成。
-- `gfn_to_hva`首先确定**gpa**对应的**gfn**映射到哪一个`kvm_memory_slot`，通过`kvm_memory_slot`做一个**地址映射**(实际就是做一个线性的地址偏移，偏移大小为`(gfn - slot->base_gfn) * PAGE_SIZE)`，这样就得到了由**gfn到hva的映射**，实际获得的是GPA的客户物理页号到宿主虚拟地址的映射。
-- `hva_to_pfn`利用获得的gfn到hva的映射，完成宿主机上的虚拟地址(该虚拟地址为gfn对应的虚拟地址)到物理地址的转换，进而获得宿主机物理页框号pfn。此转换可能涉及宿主机物理页缺页，需要请求分配该页。
+- `gfn_to_hva`: 首先确定**gpa**对应的**gfn**映射到哪一个`kvm_memory_slot`，通过`kvm_memory_slot`做一个**地址映射**(实际就是做一个线性的地址偏移，偏移大小为`(gfn - slot->base_gfn) * PAGE_SIZE)`，这样就得到了由**gfn到hva的映射**，实际获得的是**GPA的客户物理页号**到宿主虚拟地址的映射。
+- `hva_to_pfn`: 利用获得的gfn到hva的映射，完成宿主机上的虚拟地址(该虚拟地址为gfn对应的虚拟地址)到物理地址的转换，进而获得宿主机物理页框号pfn。此转换可能涉及宿主机物理页缺页，需要请求分配该页。
 
 #### 8.3.2.1. __direct_map(): 构建页表核心
 
