--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1178,7 +1178,7 @@ try_async_pf();   // 根据gfn, 在memslots中查找, 得到pfn, 主机物理页
 
 GPA到HPA的转化分两步完成，分别通过`gfn_to_hva`、`hva_to_pfn`两个函数完成。
 - `gfn_to_hva`: 首先确定**gpa**对应的**gfn**映射到哪一个`kvm_memory_slot`，通过`kvm_memory_slot`做一个**地址映射**(实际就是做一个线性的地址偏移，偏移大小为`(gfn - slot->base_gfn) * PAGE_SIZE)`，这样就得到了由**gfn到hva的映射**，实际获得的是**GPA的客户物理页号**到宿主虚拟地址的映射。
-- `hva_to_pfn`: 利用获得的gfn到hva的映射，完成宿主机上的虚拟地址(该虚拟地址为gfn对应的虚拟地址)到物理地址的转换，进而获得宿主机物理页框号pfn。此转换可能涉及宿主机物理页缺页，需要请求分配该页。
+- `hva_to_pfn`: 利用获得的gfn到hva的映射，完成**宿主机**上的**虚拟地址**(该虚拟地址为**gfn对应的虚拟地址**)到**物理地址的转换**，进而获得**宿主机物理页框号**pfn。此转换可能涉及**宿主机物理页缺页**，需要**请求分配该页**。
 
 #### 8.3.2.1. __direct_map(): 构建页表核心
 
