--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -22,8 +22,8 @@
   - [8.3. EPT异常处理流程](#83-ept异常处理流程)
     - [8.3.1. EPT异常处理入口](#831-ept异常处理入口)
     - [8.3.2. kvm_tdp_page_fault(): 建立页表项](#832-kvm_tdp_page_fault-建立页表项)
-      - [fast_page_fault(): 快速处理](#fast_page_fault-快速处理)
-      - [try_async_pf(): GPA到HPA的转换](#try_async_pf-gpa到hpa的转换)
+      - [8.3.2.1. fast_page_fault(): 快速处理](#8321-fast_page_fault-快速处理)
+      - [8.3.2.2. try_async_pf(): GPA到HPA的转换](#8322-try_async_pf-gpa到hpa的转换)
 
 <!-- /code_chunk_output -->
 
@@ -808,7 +808,7 @@ vcpu_enter_guest()
   kvm_mmu_reload(vcpu)
     kvm_mmu_load(vcpu);
       mmu_topup_memory_caches(vcpu); // 分配缓存池
-      mmu_alloc_roots(vcpu);
+      mmu_alloc_roots(vcpu); // 初始化根目录的页面
       kvm_mmu_sync_roots(vcpu);
       kvm_mmu_load_pgd(vcpu); // 加载pgd, 即cr3
         kvm_x86_ops->load_mmu_pgd(vcpu, vcpu->arch.mmu->root_hpa); // 调用 vmx_load_mmu_pgd()
@@ -1160,11 +1160,11 @@ out_unlock:
 
 假设这里**不能快速处理**，那么到后面就调用`try_async_pf`函数根据**GFN**获取对应的**PFN**，这个过程具体来说需要首先获取**GFN对应的slot**，转化成**HVA**，接着就是**正常的HOST地址翻译的过程**了，如果**HVA对应的地址并不在内存**中，还需要**HOST自己处理缺页中断**。
 
-#### fast_page_fault(): 快速处理
+#### 8.3.2.1. fast_page_fault(): 快速处理
 
 
 
-#### try_async_pf(): GPA到HPA的转换
+#### 8.3.2.2. try_async_pf(): GPA到HPA的转换
 
 ```cpp
 try_async_pf();   // 根据gfn, 在memslots中查找, 得到pfn, 主机物理页框号, HPA
