--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -18,7 +18,7 @@
 - [7. SPTE设定的辅助函数](#7-spte设定的辅助函数)
 - [8. EPT构建过程](#8-ept构建过程)
   - [8.1. EPT页表的建立流程](#81-ept页表的建立流程)
-  - [8.2. 虚拟机EPT和CR3初始化](#82-虚拟机ept和cr3初始化)
+  - [8.2. 虚拟机EPT根页表和CR3初始化](#82-虚拟机ept根页表和cr3初始化)
   - [8.3. EPT异常处理流程](#83-ept异常处理流程)
     - [8.3.1. EPT异常处理入口](#831-ept异常处理入口)
     - [8.3.2. kvm_tdp_page_fault(): 建立页表项](#832-kvm_tdp_page_fault-建立页表项)
@@ -26,6 +26,7 @@
       - [8.3.2.2. try_async_pf(): GPA到HPA的转换](#8322-try_async_pf-gpa到hpa的转换)
 
 <!-- /code_chunk_output -->
+
 
 # 1. 背景
 
@@ -799,7 +800,7 @@ static void __shadow_walk_next(struct kvm_shadow_walk_iterator *iterator,
 6. 如此往复，直到**非根模式下GVA**最后的偏移建立**最后一级Guest页表**，分配GPA，缺页异常退出到根模式建立最后一套EPT页表。
 7. 至此，**一条GVA**对应在真实物理内存单元中的内容，便可通过这**一套二维页表结构**获得。
 
-## 8.2. 虚拟机EPT和CR3初始化
+## 8.2. 虚拟机EPT根页表和CR3初始化
 
 在虚拟机vcpu启动`VCPU_RUN`时初始化
 
@@ -849,7 +850,7 @@ void vmx_load_mmu_pgd(struct kvm_vcpu *vcpu, unsigned long cr3)
                         update_guest_cr3 = false;
                 ept_load_pdptrs(vcpu);
         }
-        // 写VMCS
+        // 写VMCS, 设置虚拟机的CR3寄存器
         if (update_guest_cr3)
                 vmcs_writel(GUEST_CR3, guest_cr3);
 }
@@ -902,7 +903,12 @@ static int (*kvm_vmx_exit_handlers[])(struct kvm_vcpu *vcpu) = {
 };
 ```
 
-注意: 内存虚拟化异常有这两类, 这里讨论第一种
+Intel **EPT相关的VMEXIT**有两个：
+
+- `EPT Misconfiguration`：**EPT pte配置错误**，具体情况参考Intel Manual 3C, 28.2.3.1 EPT Misconfigurations
+- `EPT Violation`：当**guest VM**访存出发到EPT相关的部分，在**不产生EPT Misconfiguration的前提**下，可能会产生EPT Violation，具体情况参考Intel Manual 3C, 28.2.3.2 EPT Violations
+
+当**Guest第一次访问某页面**时，首先触发的是**Guest OS**的**page fault**，**不会vm-exit**, Guest OS会修复好**自己mmu的页结构**，并且**访问对应的GPA**，此时由于**对应的EPT结构**还**没有建立**，会触发EPT Violation。对于Intel EPT，EPT缺页的处理在函数tdp_page_fault中。
 
 所以在发生EPT violation的时候，根据`EXIT_REASON_EPT_VIOLATION`走到`handle_ept_violation`函数, KVM中会执行`handle_ept_violation`：
 
@@ -1386,10 +1392,10 @@ out:
 
 这样看每次缺页都会分配新的mmu page，虚拟机每次启动是根据guest不停的进行`EXIT_REASON_EPT_VIOLATION`，整个页表就建立起来了。
 
-
-
 # 9. 参考
 
 https://www.cnblogs.com/ck1020/p/6043054.html
 
 https://blog.csdn.net/leoufung/article/details/52661968
+
+https://blog.csdn.net/xelatex_kvm/article/details/17685123
