--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -16,14 +16,14 @@
 - [5. 通过gaddr来索引shadow page table (EPT)](#5-通过gaddr来索引shadow-page-table-ept)
 - [6. 影子页表迭代器](#6-影子页表迭代器)
 - [7. SPTE设定的辅助函数](#7-spte设定的辅助函数)
-- [8. EPT构建过程](#8-ept构建过程)
-  - [8.1. EPT页表的建立流程](#81-ept页表的建立流程)
-  - [8.2. 虚拟机EPT根页表和CR3初始化](#82-虚拟机ept根页表和cr3初始化)
-  - [8.3. EPT异常处理流程](#83-ept异常处理流程)
-    - [8.3.1. EPT异常处理入口](#831-ept异常处理入口)
-    - [8.3.2. kvm_tdp_page_fault(): 建立页表项](#832-kvm_tdp_page_fault-建立页表项)
-      - [8.3.2.1. fast_page_fault(): 快速处理](#8321-fast_page_fault-快速处理)
-      - [8.3.2.2. try_async_pf(): GPA到HPA的转换](#8322-try_async_pf-gpa到hpa的转换)
+- [8. 虚拟机EPT根页表和CR3初始化](#8-虚拟机ept根页表和cr3初始化)
+- [9. EPT构建过程](#9-ept构建过程)
+  - [9.1. EPT页表的建立流程](#91-ept页表的建立流程)
+  - [9.2. EPT异常处理流程](#92-ept异常处理流程)
+    - [9.2.1. EPT异常处理入口](#921-ept异常处理入口)
+    - [9.2.2. kvm_tdp_page_fault(): 建立页表项](#922-kvm_tdp_page_fault-建立页表项)
+      - [9.2.2.1. fast_page_fault(): 快速处理](#9221-fast_page_fault-快速处理)
+      - [9.2.2.2. try_async_pf(): GPA到HPA的转换](#9222-try_async_pf-gpa到hpa的转换)
 
 <!-- /code_chunk_output -->
 
@@ -784,23 +784,7 @@ static void __shadow_walk_next(struct kvm_shadow_walk_iterator *iterator,
 
 `link_shadow_page`函数：将新分配出来的**下一级影子页表页**的**地址**填写**本级对应的SPTE**中
 
-# 8. EPT构建过程
-
-下面借助于KVM源代码分析下**EPT的构建过程**，其构建模式和普通页表一样，属于**中断触发式**。
-
-即**初始页表是空的**，只有在**访问未命中**的时候**引发缺页中断**，然后缺页处理程序**构建页表**。
-
-## 8.1. EPT页表的建立流程
-
-1. 初始情况下：**Guest CR3**指向的Guest物理页面为空页面；
-2. **Guest页表缺页异常**，KVM采用**不处理Guest页表缺页**的机制，**不会导致VM Exit**，由**Guest的缺页异常处理函数**负责分配**一个Guest物理页面（GPA**），将该页面物理地址回填，建立**Guest页表结构**；
-3. 完成该映射的过程需要将**GPA翻译到HPA**，此时**该进程**相应的**EPT页表为空**，产生`EPT_VIOLATION`，虚拟机退出到**根模式**下执行，由KVM捕获该异常，建立**该GPA到HOST物理地址HPA的映射**，完成一套EPT页表的建立，**中断返回**，切换到**非根模式**继续运行。
-4. **VCPU的mmu**查询下一级**Guest页表**，根据GVA的偏移产生一条**新的GPA**，Guest寻址该GPA对应页面，产生**Guest缺页**，**不发生VM_Exit**，由Guest系统的缺页处理函数捕获该异常，从Guest物理内存中选择一个空闲页，将该Guest物理地址GPA回填给Guest页表；
-5. 此时该**GPA**对应的**EPT页表项不存在**，发生`EPT_VIOLATION`，切换到**根模式**下，由KVM负责建立该`GPA->HPA`映射，再切换回非根模式；
-6. 如此往复，直到**非根模式下GVA**最后的偏移建立**最后一级Guest页表**，分配GPA，缺页异常退出到根模式建立最后一套EPT页表。
-7. 至此，**一条GVA**对应在真实物理内存单元中的内容，便可通过这**一套二维页表结构**获得。
-
-## 8.2. 虚拟机EPT根页表和CR3初始化
+# 8. 虚拟机EPT根页表和CR3初始化
 
 在虚拟机vcpu启动`VCPU_RUN`时初始化
 
@@ -856,7 +840,24 @@ void vmx_load_mmu_pgd(struct kvm_vcpu *vcpu, unsigned long cr3)
 }
 ```
 
-## 8.3. EPT异常处理流程
+# 9. EPT构建过程
+
+下面借助于KVM源代码分析下**EPT的构建过程**，其构建模式和普通页表一样，属于**中断触发式**。
+
+即**初始页表是空的**，只有在**访问未命中**的时候**引发缺页中断**，然后缺页处理程序**构建页表**。
+
+## 9.1. EPT页表的建立流程
+
+1. 初始情况下：**Guest CR3**指向的**Guest物理页面**为空页面；
+2. **Guest页表缺页异常**，KVM采用**不处理Guest页表缺页**的机制，**不会导致VM Exit**，由**Guest的缺页异常处理函数**负责分配**一个Guest物理页面（GPA**），将该页面物理地址回填，建立**Guest页表结构**；
+3. **完成该映射的过程**需要将**GPA翻译到HPA**，此时**该进程**相应的**EPT页表为空**，产生`EPT_VIOLATION`，虚拟机退出到**根模式**下执行，由KVM捕获该异常，建立**该GPA到HOST物理地址HPA的映射**，完成一套EPT页表的建立，**中断返回**，切换到**非根模式**继续运行。
+4. **VCPU的mmu**查询下一级**Guest页表**，根据GVA的偏移产生一条**新的GPA**，Guest寻址该GPA对应页面，产生**Guest缺页**，**不发生VM_Exit**，由Guest系统的缺页处理函数捕获该异常，从Guest物理内存中选择一个空闲页，将该Guest物理地址GPA回填给Guest页表；
+5. 此时该**GPA**对应的**EPT页表项不存在**，发生`EPT_VIOLATION`，切换到**根模式**下，由KVM负责建立该`GPA->HPA`映射，再切换回非根模式；
+6. 如此往复，直到**非根模式下GVA**最后的偏移建立**最后一级Guest页表**，分配GPA，缺页异常退出到根模式建立最后一套EPT页表。
+7. 至此，**一条GVA**对应在真实物理内存单元中的内容，便可通过这**一套二维页表结构**获得。
+
+
+## 9.2. EPT异常处理流程
 
 ```cpp
 vmx_handle_exit()  // vmxexit的入口
@@ -890,7 +891,7 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
 
-### 8.3.1. EPT异常处理入口
+### 9.2.1. EPT异常处理入口
 
 **初始状态EPT页表为空**，当**客户机运行**时，其使用的**GVA转化成GPA**后，还需要CPU根据**GPA查找EPT**，从而**定位具体的HPA**，但是由于此时**EPT为空**，所以会引发**缺页中断**，发生**VM-exit**, 此时**CPU进入到根模式**，运行VMM（这里指KVM），进入`vmx_handle_exit`函数, 在KVM中定义了一个**异常处理数组**来处理**对应的VM-exit**
 
@@ -907,8 +908,6 @@ Intel **EPT相关的VMEXIT**有两个：
 
 - `EPT Misconfiguration`：**EPT pte配置错误**，具体情况参考Intel Manual 3C, 28.2.3.1 EPT Misconfigurations
 - `EPT Violation`：当**guest VM**访存出发到EPT相关的部分，在**不产生EPT Misconfiguration的前提**下，可能会产生EPT Violation，具体情况参考Intel Manual 3C, 28.2.3.2 EPT Violations
-
-当**Guest第一次访问某页面**时，首先触发的是**Guest OS**的**page fault**，**不会vm-exit**, Guest OS会修复好**自己mmu的页结构**，并且**访问对应的GPA**，此时由于**对应的EPT结构**还**没有建立**，会触发EPT Violation。对于Intel EPT，EPT缺页的处理在函数tdp_page_fault中。
 
 所以在发生EPT violation的时候，根据`EXIT_REASON_EPT_VIOLATION`走到`handle_ept_violation`函数, KVM中会执行`handle_ept_violation`：
 
@@ -1072,9 +1071,11 @@ static inline int kvm_mmu_do_page_fault(struct kvm_vcpu *vcpu, gpa_t cr2_or_gpa,
 
 这里就会调用上面初始化的`kvm_tdp_page_fault()`, 该函数用于完成EPT表项的建立. 
 
-### 8.3.2. kvm_tdp_page_fault(): 建立页表项
+### 9.2.2. kvm_tdp_page_fault(): 建立页表项
 
 而**GFN**和**PFN**就一个**转换关系**，这就是**影子页表(或EPT)完成的映射**
+
+![2020-04-04-22-28-28.png](./images/2020-04-04-22-28-28.png)
 
 ```cpp
 // arch/x86/kvm/mmu/mmu.c
@@ -1166,11 +1167,11 @@ out_unlock:
 
 假设这里**不能快速处理**，那么到后面就调用`try_async_pf`函数根据**GFN**获取对应的**PFN**，这个过程具体来说需要首先获取**GFN对应的slot**，转化成**HVA**，接着就是**正常的HOST地址翻译的过程**了，如果**HVA对应的地址并不在内存**中，还需要**HOST自己处理缺页中断**。
 
-#### 8.3.2.1. fast_page_fault(): 快速处理
+#### 9.2.2.1. fast_page_fault(): 快速处理
 
 
 
-#### 8.3.2.2. try_async_pf(): GPA到HPA的转换
+#### 9.2.2.2. try_async_pf(): GPA到HPA的转换
 
 ```cpp
 try_async_pf();   // 根据gfn, 在memslots中查找, 得到pfn, 主机物理页框号, HPA
