--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -27,7 +27,6 @@
 
 <!-- /code_chunk_output -->
 
-
 # 1. 背景
 
 在虚拟化环境下，intel CPU在处理器级别加入了对内存虚拟化的支持。即扩展页表EPT，而AMD也有类似的成为NPT。在此之前，内存虚拟化使用的一个重要技术为影子页表。
@@ -1075,8 +1074,6 @@ static inline int kvm_mmu_do_page_fault(struct kvm_vcpu *vcpu, gpa_t cr2_or_gpa,
 
 而**GFN**和**PFN**就一个**转换关系**，这就是**影子页表(或EPT)完成的映射**
 
-![2020-04-04-22-28-28.png](./images/2020-04-04-22-28-28.png)
-
 ```cpp
 // arch/x86/kvm/mmu/mmu.c
 int kvm_tdp_page_fault(struct kvm_vcpu *vcpu, gpa_t gpa, u32 error_code,
@@ -1169,7 +1166,7 @@ out_unlock:
 
 #### 9.2.2.1. fast_page_fault(): 快速处理
 
-
+test
 
 #### 9.2.2.2. try_async_pf(): GPA到HPA的转换
 
@@ -1185,9 +1182,11 @@ try_async_pf();   // 根据gfn, 在memslots中查找, 得到pfn, 主机物理页
 
 GPA到HPA的转化分两步完成，分别通过`gfn_to_hva`、`hva_to_pfn`两个函数完成。
 - `gfn_to_hva`: 首先确定**gpa**对应的**gfn**映射到哪一个`kvm_memory_slot`，通过`kvm_memory_slot`做一个**地址映射**(实际就是做一个线性的地址偏移，偏移大小为`(gfn - slot->base_gfn) * PAGE_SIZE)`，这样就得到了由**gfn到hva的映射**，实际获得的是**GPA的客户物理页号**到宿主虚拟地址的映射。
-- `hva_to_pfn`: 利用获得的gfn到hva的映射，完成**宿主机**上的**虚拟地址**(该虚拟地址为**gfn对应的虚拟地址**)到**物理地址的转换**，进而获得**宿主机物理页框号**pfn。此转换可能涉及**宿主机物理页缺页**，需要**请求分配该页**。
+- `hva_to_pfn`: 利用获得的gfn到hva的映射，完成**宿主机**上的**虚拟地址**(该虚拟地址为**gfn对应的虚拟地址**)到**物理地址的转换**，进而获得**宿主机物理页框号**pfn。此转换可能涉及**宿主机物理页缺页！！！**，需要**请求分配该页！！！**。
 
-#### 8.3.2.1. __direct_map(): 构建页表核心
+
+#### __direct_map(): 构建页表核心
+
 
 `__direct_map()`是构建页表的核心函数, 
 
@@ -1217,7 +1216,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
         level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);
 
         trace_kvm_mmu_spte_requested(gpa, level, pfn);
-        // 遍历所有页表中addr对应的页表项spte, 下面有详细说明
+        // 遍历所有页表中addr对应的页表项spte, 上面有详细说明
         for_each_shadow_entry(vcpu, gpa, it) {
                 /*
                  * We cannot overwrite existing page tables with an NX
@@ -1268,17 +1267,19 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
 先调用 `kvm_mmu_hugepage_adjust()` 对level和gfn、pfn做出调整, 里面会调用`gfn_to_memslot_dirty_bitmap`函数判断**当前gfn对应的slot是否可用**，当然绝大多数情况下是可用的。**为什么**要进行这样的判断呢？在if内部可以看到是**获取level**，如果**当前GPN对应的slot可用**，我们就可以获取分配slot的pagesize，然后得到**最低级的level**，比如如果是**2M的页**，那么**level就为2**，为**4K的页**，**level就为1**.
 
-`for_each_shadow_entry`，用于根据GFN遍历EPT页表的对应项，这点后面会详细解释。循环中首先判断**entry的level**和**请求的level**是否相等，相等说明**该entry处引起的violation**，即该**entry对应**的**下级页**或者**页表**不在**内存**中，或者直接为NULL。
+`for_each_shadow_entry`，用于根据GFN遍历EPT页表的对应项，这点上面有详细解释。
 
-如果**level不相等**，就进入后面的if判断，这是判断**该entry**对应的**下一级页是否存在**，如果**不存在**需要**重新构建**，**存在**就**直接向后遍历**，即对比二级页表中的entry。
+循环中首先判断**entry的level**和**请求的level**是否相等，相等说明**该entry处引起的violation**，即该**entry对应**的**下级页**或者**页表**不在**内存**中，或者直接为NULL。
 
-整个处理流程就是这样，根据**GPA**组**逐层查找EPT**，最终**level相等！！！** 的时候，就根据**最后一层的索引**定位一个**PTE**，**该PTE**应该指向的就是**GFN对应的PFN**，那么这时候**set spte**就可以了。**最好的情况**就是**最后一级页表**中的**entry指向的物理页**被换出外磁盘，这样只需要处理一次EPT violation，而如果在初始全部为空的状态下访问，**每一级的页表**都需要**重新构建**，则需要处理四次EPTviolation，发生4次`VM-exit`。
+如果**level不相等**(即不到叶子节点)，就进入后面的if判断，这是判断**该entry**对应的**下一级页是否存在**，如果**不存在**需要**重新构建**，**存在**就**直接向后遍历**，即对比二级页表中的entry。
 
-对**非叶子节点** (**level相等之前**), 发现需要的某一级的页表项为NULL, 就调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中(即设置页表项指向这个page)。
+对**非叶子节点** (**level相等之前**), 发现需要的**某一级的页表项为NULL**, 就调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中(即设置当前页表项spte指向这个page)。
 
-**一直到叶子节点**, 对于**叶子节点**，则**直接调用** `mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
+**一直到叶子节点**(level相等), 则跳出，直接调用`mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
 
-#### 8.3.2.2. kvm_mmu_page: 创建页表页
+整个处理流程就是这样，根据**GPA**组**逐层查找EPT**，最终**level相等！！！** (叶子节点, 直接映射真正的物理页面pfn)的时候，就根据**最后一层的索引**定位一个**PTE**，**该PTE**应该指向的就是**GFN对应的PFN**，那么这时候**set spte**就可以了。**最好的情况**就是**最后一级页表**中的**entry指向的物理页**被换出外磁盘，这样只需要处理一次EPT violation，而如果在初始全部为空的状态下访问，**每一级的页表**都需要**重新构建**，则需要处理四次EPTviolation，发生4次`VM-exit`。
+
+##### kvm_mmu_get_page: 创建页表页
 
 `kvm_mmu_get_page`函数是**创建mmu页结构**的函数，在该函数主要流程如下：
 
@@ -1392,6 +1393,27 @@ out:
 如果在**对应链表**中找到一个**合适的页**，就直接利用该页，否则需要调用`kvm_mmu_alloc_page`函数**重新申请一个页**，主要是申请一个`kvm_mmu_page`结构和**一个存放表项**的**page**，这就用到了之前我们说过的**三种缓存**，这里只用到了两个，分别是`mmu_page_header_cache`和`mmu_page_cache`。这样分配好后，把对应的`kvm_mmu_page`作为一个节点加入到**全局的HASH链表**中，最后返回sp.
 
 这样看每次缺页都会分配新的mmu page，虚拟机每次启动是根据guest不停的进行`EXIT_REASON_EPT_VIOLATION`，整个页表就建立起来了。
+
+#### kvm_tdp_page_fault 小结
+
+在**非fast page fault**，**非异步page fault**时:
+
+![2020-04-04-22-28-28.png](./images/2020-04-04-22-28-28.png)
+
+可以看到，首先通过`try_async_pf`**从gfn获得pfn**，
+
+`__gfn_to_pfn`中，首先调用`gfn_to_memslot`，确定该gfn在哪一个memslot中；之后调用`__gfn_to_pfn_memslot`，该函数首先调用`__gfn_to_hva_many`获得**gfn到hva的映射**，之后调用`hva_to_pfn`获得**hva到pfn的映射**。
+
+之后调用`__direct_map`函数进行映射。
+
+`__direct_map`中，对非叶子节点的处理调用kvm_mmu_get_page获得一页新的mmu page，之后调用link_shadow_page调用mmu_set_spte将其加入到EPT paging structure中。对于叶子节点，则直接调用mmu_set_spte。mmu_set_spte调用set_spte来设置spte。spte是设置页表结构的最终调用函数。
+
+`kvm_mmu_get_page`函数是创建mmu页结构的函数，在该函数主要流程如下：
+1. 设置role
+2. 通过role和gfn在反向映射表中查找kvm mmu page，如果存在之前创建过的page，则返回该page
+3. 调用`kvm_mmu_alloc_page`创建新的struct kvm_mmu_page
+4. 调用`hlist_add_head`将该页加入到`kvm->arch.mmu_page_hash`哈希表中
+5. 调用`init_shadow_page_table`初始化对应的spt
 
 # 9. 参考
 
