--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1269,11 +1269,11 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
 `for_each_shadow_entry`，用于根据GFN遍历EPT页表的对应项，这点上面有详细解释。
 
-循环中首先判断**entry的level**和**请求的level**是否相等，相等说明**该entry处引起的violation**，即该**entry对应**的**下级页**或者**页表**不在**内存**中，或者直接为NULL。
+循环中首先判断**entry的level**和**请求的level**是否相等，相等说明到了**叶子节点**, 即**该entry处引起的violation**，即该**entry对应**的**下级页**不在**内存**中，或者直接为NULL。
 
-如果**level不相等**(即不到叶子节点)，就进入后面的if判断，这是判断**该entry**对应的**下一级页是否存在**，如果**不存在**需要**重新构建**，**存在**就**直接向后遍历**，即对比二级页表中的entry。
+如果**level不相等**(即不到叶子节点)，就进入后面的if判断，这是判断**该entry**对应的**下一级页表是否存在**，如果**不存在**需要**重新构建**，**存在**就**直接向后遍历**，即对比二级页表中的entry。
 
-对**非叶子节点** (**level相等之前**), 发现需要的**某一级的页表项为NULL**, 就调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中(即设置当前页表项spte指向这个page)。
+对**非叶子节点** (**level不相等**), 判断**当前页表项spte**是否为0(即**该页表项spte**对应的**下一级的页表项不存在**), 就调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中(即设置**当前页表项spte**指向这个**页表项页**`kvm_mmu_page`)。如果**存在**就**直接向后遍历**
 
 **一直到叶子节点**(level相等), 则跳出，直接调用`mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
 
