--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1224,7 +1224,9 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                  */
                 disallowed_hugepage_adjust(it, gfn, &pfn, &level);
                 // 得到虚拟机物理页帧号, 确保对应层级的偏移部分为0，如level=1，则baseaddr的低12位就清零
-                // KVM_PAGES_PER_HPAGE(level)按照上面的分析，就是**大页**是**普通页面多少倍大小**，也就是对其关系；那么这里计算出来的`gfn`就是按照**大页倍数对齐后**的**起始gfn编号**
+                // KVM_PAGES_PER_HPAGE(level)按照上面的分析，就是大页是普通页面多少倍大小，也就是对其关系；
+                // 那么这里计算出来的`gfn`就是按照大页倍数对齐后的起始gfn编号
+                // 跳出循环时候, 这个就是最后一级页表项(即直接指向页面的那个)对应的页面起始gfn编号
                 base_gfn = gfn & ~(KVM_PAGES_PER_HPAGE(it.level) - 1);
                 // entry的level和请求的level相等, 说明该entry引起的violation, 
                 // 即该entry对应的下级页或者页表不在内存中，或者直接为NULL。
@@ -1269,13 +1271,13 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
 `for_each_shadow_entry`，用于根据GFN遍历EPT页表的对应项，这点上面有详细解释。
 
-循环中首先判断**entry的level**和**请求的level**是否相等，相等说明到了**叶子节点**, 即**该entry处引起的violation**，即该**entry对应**的**下级页**不在**内存**中，或者直接为NULL。
+循环中首先判断**entry的level**和**请求的level**是否相等，
 
-如果**level不相等**(即不到叶子节点)，就进入后面的if判断，这是判断**该entry**对应的**下一级页表是否存在**，如果**不存在**需要**重新构建**，**存在**就**直接向后遍历**，即对比二级页表中的entry。
-
-对**非叶子节点** (**level不相等**), 判断**当前页表项spte**是否为0(即**该页表项spte**对应的**下一级的页表项不存在**), 就调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中(即设置**当前页表项spte**指向这个**页表项页**`kvm_mmu_page`)。如果**存在**就**直接向后遍历**
+- level**相等**说明到了**叶子节点**, 即**该entry处引起的violation**，即该**entry对应**的**下级页**不在**内存**中，或者直接为NULL。
 
 **一直到叶子节点**(level相等), 则跳出，直接调用`mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
+
+- level**不相等**就说明是**非叶子结点**, 对**非叶子节点**, 判断**当前页表项spte**是否为0(即**该页表项spte**对应的**下一级的页表项不存在**), 就调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中(即设置**当前页表项spte**指向这个**页表项页**`kvm_mmu_page`)。如果**存在**就**直接向后遍历**.
 
 整个处理流程就是这样，根据**GPA**组**逐层查找EPT**，最终**level相等！！！** (叶子节点, 直接映射真正的物理页面pfn)的时候，就根据**最后一层的索引**定位一个**PTE**，**该PTE**应该指向的就是**GFN对应的PFN**，那么这时候**set spte**就可以了。**最好的情况**就是**最后一级页表**中的**entry指向的物理页**被换出外磁盘，这样只需要处理一次EPT violation，而如果在初始全部为空的状态下访问，**每一级的页表**都需要**重新构建**，则需要处理四次EPTviolation，发生4次`VM-exit`。
 
