--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -885,8 +885,8 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |               ├─ for_each_shadow_entry(vcpu, gpa, it);   // 遍历EPT页表
  |   |   |   |               ├─ it.level == level: break;   //  如果页表的level等于请求的level, 表明是该entry引起的violation(说明到了叶子节点), 跳出
  |   |   |   |               ├─ sp = kvm_mmu_get_page();   // 对于非叶子节点, 如果该entry页表项值为0, 表明下一级页表页不存在, 则分配当前entry的下一级(level-1, 指向的页表)页表的kvm_mmu_page(sp)
- |   |   |   |               ├─ link_shadow_page(vcpu, it.sptep, sp);   // 将分配的下一级页表链接到当前entry
- |   |   |   |           |   └─ mmu_set_spte();   // 设置spte
+ |   |   |   |               ├─ link_shadow_page(vcpu, it.sptep, sp);   // 非叶子结点, 下一级页表页不存在时, 将分配的下一级页表页链接到当前entry
+ |   |   |   |           |   └─ mmu_set_spte();   // 设置最后一级页表项(即表项指向真正的页面)
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
 
@@ -1273,9 +1273,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
 循环中首先判断**entry的level**和**请求的level**是否相等，
 
-- level**相等**说明到了**叶子节点**, 即**该entry处引起的violation**，即该**entry对应**的**下级页**不在**内存**中，或者直接为NULL。
-
-**一直到叶子节点**(level相等), 则跳出，直接调用`mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
+- level**相等**说明到了**叶子节点**, 即**该entry处引起的violation**，即该**entry对应**的**下级页**不在**内存**中，或者直接为NULL。 则会跳出，直接调用`mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
 
 - level**不相等**就说明是**非叶子结点**, 对**非叶子节点**, 判断**当前页表项spte**是否为0(即**该页表项spte**对应的**下一级的页表项不存在**), 就调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中(即设置**当前页表项spte**指向这个**页表项页**`kvm_mmu_page`)。如果**存在**就**直接向后遍历**.
 
