--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -289,8 +289,6 @@ static int mmu_topup_memory_cache(struct kvm_mmu_memory_cache *cache,
 
 从上图可以看到，`struct kvm_mmu`是`struct kvm_vcpu_arch`的一个字段。
 
-![2020-03-30-17-16-04.png](./images/2020-03-30-17-16-04.png)
-
 # 6. kvm_mmu 结构体: vMMU数据结构
 
 ```cpp
@@ -507,6 +505,13 @@ struct kvm_mmu_page {
 
 影子页表页，shadow page，就是**装载影子页表**的**页面**，**每个页面**中分为**多个表项**，**每个表项**称为**spte**，注意不论哪个级别，表项都称为spte。
 
+![2020-03-30-17-16-04.png](./images/2020-03-30-17-16-04.png)
+
+![2020-04-05-00-04-55.png](./images/2020-04-05-00-04-55.png)
+
+注意, 这个影子页表页的page描述符中的private指向了管理该页表页的`kvm_mmu_page`成员。
+
+一个页表页，会被会被多个上级页表项引用到，那么**所有引用该页表页**的**上级页表项**称为`parent_spte`，存放在`kvm_mmu_page`的`parent_ptes`链表中
 
 # 8. 参考
 
