--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1272,9 +1272,9 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
 循环中首先判断**entry的level**和**请求的level**是否相等，
 
-- level**相等**说明到了**叶子节点**, 即**该entry处引起的violation**，即该**entry对应**的**下级页**不在**内存**中，或者直接为NULL。 则会跳出，直接调用`mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**。`set_spte`是**设置页表结构的最终调用函数**。
+- level**相等**说明到了**叶子节点**, 即**该entry处引起的violation**，即该**entry对应**的**下级页**不在**内存**中，或者直接为NULL。 则会跳出，直接调用`mmu_set_spte`。 `mmu_set_spte`调用 `set_spte` 来**设置spte**, 这里设置了PFN, 属于HPA。
 
-- level**不相等**就说明是**非叶子结点**, 对**非叶子节点**, 判断**当前页表项spte**是否为0(即**该页表项spte**对应的**下一级的页表项不存在**), 就调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中(即设置**当前页表项spte**指向这个**页表项页**`kvm_mmu_page`)。如果**存在**就**直接向后遍历**.
+- level**不相等**就说明是**非叶子结点**, 对**非叶子节点**, 判断**当前页表项spte**是否为0(即**该页表项spte**对应的**下一级的页表项不存在**), 就调用 `kvm_mmu_get_page` 获得**一页新的mmu page**，之后调用 `link_shadow_page` 调用 `mmu_set_spte`将其加入到EPT paging structure中(即设置**当前页表项spte**指向这个**页表项页**`kvm_mmu_page`, 这个是HPA)。如果**存在**就**直接向后遍历**.
 
 整个处理流程就是这样，根据**GPA**组**逐层查找EPT**，最终**level相等！！！** (叶子节点, 直接映射真正的物理页面pfn)的时候，就根据**最后一层的索引**定位一个**PTE**，**该PTE**应该指向的就是**GFN对应的PFN**，那么这时候**set spte**就可以了。**最好的情况**就是**最后一级页表**中的**entry指向的物理页**被换出外磁盘，这样只需要处理一次EPT violation，而如果在初始全部为空的状态下访问，**每一级的页表**都需要**重新构建**，则需要处理四次EPTviolation，发生4次`VM-exit`。
 
