--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -454,8 +454,8 @@ struct kvm_mmu_page {
         // 该域只对页结构的叶子节点有效，可以执行该页的翻译是否与guest的翻译一致。
         // 如果为false，则可能出现修改了该页中的pte但没有更新tlb，而guest读取了tlb中的数据，导致了不一致。
         bool unsync;
-        // 该页的generation number。KVM维护了一个全局的的gen number（kvm->arch.mmu_valid_gen），如果该域与全局的gen number不相等，则将该页标记为invalid page。
-        // 该结构用来快速的碾压掉KVM的MMU paging structure。例如，如果想废弃掉当前所有的MMU页结构，需要处理掉所有的MMU页面和对应的映射；但是通过该结构，可以直接将kvm->arch.mmu_valid_gen加1，那么当前所有的MMU页结构都变成了invalid，而处理掉页结构的过程可以留给后面的过程（如内存不够时）再处理，可以加快废弃所有MMU页结构的速度。
+        // 该页的generation number, 有效版本号。KVM维护了一个全局的的gen number(kvm->arch.mmu_valid_gen)，刚开始是相同的, 如果该域与全局的gen number不相等，则将该页标记为invalid page。
+        // 该结构用来快速的碾压掉该页表项页管理的虚拟机物理地址空间。例如，如果想废弃掉当前所有的MMU页结构，需要处理掉所有的MMU页面和对应的映射；但是通过该结构，可以直接将kvm->arch.mmu_valid_gen加1，那么当前所有的MMU页结构都变成了invalid，而处理掉页结构的过程可以留给后面的过程（如内存不够时）再处理，可以加快废弃所有MMU页结构的速度。
         // 当mmu_valid_gen值达到最大时，可以调用kvm_mmu_invalidate_zap_all_pages手动废弃掉所有的MMU页结构。
         u8 mmu_valid_gen;
         bool mmio_cached;
@@ -511,7 +511,7 @@ struct kvm_mmu_page {
 
 注意, 这个影子页表页的page描述符中的private指向了管理该页表页的`kvm_mmu_page`成员。
 
-一个页表页，会被会被多个上级页表项引用到，那么**所有引用该页表页**的**上级页表项**称为`parent_spte`，存放在`kvm_mmu_page`的`parent_ptes`链表中
+**一个页表页**，会被会被**多个上级页表项引用**到，那么**所有引用该页表页**的**上级页表项**称为`parent_spte`，存放在`kvm_mmu_page`的`parent_ptes`**链表**中
 
 # 8. 参考
 
