--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -511,7 +511,7 @@ struct kvm_mmu_page {
 
 注意, 这个影子页表页的page描述符中的private指向了管理该页表页的`kvm_mmu_page`成员。
 
-**一个页表页**，会被会被**多个上级页表项引用**到，那么**所有引用该页表页**的**上级页表项**称为`parent_spte`，存放在`kvm_mmu_page`的`parent_ptes`**链表**中
+**一个页表页**，会被会被**多个上级页表项引用**到，那么**所有引用该页表页**的**上级页表项**称为`parent_spte`，存放在`kvm_mmu_page`的`parent_ptes`**链表**中, KVM给出了相关的辅助函数，以便方向查找的时候使用
 
 # 8. 参考
 
