--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -513,6 +513,8 @@ struct kvm_mmu_page {
 
 **一个页表页**，会被会被**多个上级页表项引用**到，那么**所有引用该页表页**的**上级页表项**称为`parent_spte`，存放在`kvm_mmu_page`的`parent_ptes`**链表**中, KVM给出了相关的辅助函数，以便方向查找的时候使用
 
+![2020-04-05-00-35-03.png](./images/2020-04-05-00-35-03.png)
+
 # 8. 参考
 
 https://blog.csdn.net/leoufung/article/details/52639876?depth_1-utm_source=distribute.pc_relevant.none-task&utm_source=distribute.pc_relevant.none-task
