--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -448,7 +448,7 @@ kvm_mmu_page结构是KVM MMU中最重要的结构之一，其存储了KVM MMU页
 struct kvm_mmu_page {
         // 将该结构链接到 kvm->arch.active_mmu_pages 和 invalid_list 上，标注该页结构不同的状态
         struct list_head link;
-        // 将该结构链接到kvm->arch.mmu_page_hash哈希表上，以便进行快速查找，hash key由接下来的gfn和role决定
+        // 将该结构链接到kvm->arch.mmu_page_hash哈希表上，以便进行快速查找，hash key由接下来的gfn决定
         struct hlist_node hash_link;
         struct list_head lpage_disallowed_link;
         // 该域只对页结构的叶子节点有效，可以执行该页的翻译是否与guest的翻译一致。
@@ -514,6 +514,8 @@ struct kvm_mmu_page {
 **一个页表页**，会被会被**多个上级页表项引用**到，那么**所有引用该页表页**的**上级页表项**称为`parent_spte`，并且会将所有上级页表项的`parent_spte`存放在当前`kvm_mmu_page`的`parent_ptes`**链表**中, `mmu_page_add_parent_pte()`, 使用参见`__direct_map()`
 
 ![2020-04-05-00-35-03.png](./images/2020-04-05-00-35-03.png)
+
+分配好`kvm_mmu_page`结构后, 会用其**管理**的**GUEST物理地址空间**的**起始GFN**为key计算一个**hash值**，并上到哈希表`arch.mmu_page_hash[]`上，以便可以**快速的根据gfn**找到**管理该物理地址空间的页表页**；
 
 # 8. 参考
 
