--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1353,7 +1353,7 @@ static struct kvm_mmu_page *kvm_mmu_get_page(struct kvm_vcpu *vcpu,
         }
         /*如果根据页框号没有遍历到合适的page，就需要重新创建一个页*/
         ++vcpu->kvm->stat.mmu_cache_miss;
-
+        // 
         sp = kvm_mmu_alloc_page(vcpu, direct);
         /*设置其对应的客户机物理页框号*/
         sp->gfn = gfn;
@@ -1394,7 +1394,7 @@ out:
 
 如果在**对应链表**中找到一个**合适的页**，就直接利用该页，否则需要调用`kvm_mmu_alloc_page`函数**重新申请一个页**，主要是申请一个`kvm_mmu_page`结构和**一个存放表项**的**page**，这就用到了之前我们说过的**三种缓存**，这里只用到了两个，分别是`mmu_page_header_cache`和`mmu_page_cache`。
 
-这样分配好`kvm_mmu_page`结构后, 会用其**管理**的**GUEST物理地址空间**的**起始GFN**为key计算一个**hash值**，并上到哈希表arch.mmu_page_hash[]上，以便可以快速的根据gfn找到管理该物理地址空间的页表页；作为一个节点加入到**全局的HASH链表**中，最后返回sp.
+这样分配好`kvm_mmu_page`结构后, 会用其**管理**的**GUEST物理地址空间**的**起始GFN**为key计算一个**hash值**，并上到**哈希表**`vcpu->kvm->arch.mmu_page_hash[]`上，以便可以**快速的根据gfn**找到**管理该物理地址空间的页表页**；作为一个节点加入到**全局的HASH链表**中，最后返回sp.
 
 这样看每次缺页都会分配新的mmu page，虚拟机每次启动是根据guest不停的进行`EXIT_REASON_EPT_VIOLATION`，整个页表就建立起来了。
 
