--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -454,9 +454,7 @@ struct kvm_mmu_page {
         // 该域只对页结构的叶子节点有效，可以执行该页的翻译是否与guest的翻译一致。
         // 如果为false，则可能出现修改了该页中的pte但没有更新tlb，而guest读取了tlb中的数据，导致了不一致。
         bool unsync;
-        // 该页的generation number, 有效版本号。KVM维护了一个全局的的gen number(kvm->arch.mmu_valid_gen)，刚开始是相同的, 如果该域与全局的gen number不相等，则将该页标记为invalid page。
-        // 该结构用来快速的碾压掉该页表项页管理的虚拟机物理地址空间。例如，如果想废弃掉当前所有的MMU页结构，需要处理掉所有的MMU页面和对应的映射；但是通过该结构，可以直接将kvm->arch.mmu_valid_gen加1，那么当前所有的MMU页结构都变成了invalid，而处理掉页结构的过程可以留给后面的过程（如内存不够时）再处理，可以加快废弃所有MMU页结构的速度。
-        // 当mmu_valid_gen值达到最大时，可以调用kvm_mmu_invalidate_zap_all_pages手动废弃掉所有的MMU页结构。
+        // 该页的generation number, 有效版本号。
         u8 mmu_valid_gen;
         bool mmio_cached;
         bool lpage_disallowed; /* Can't be replaced by an equiv large page */
@@ -515,7 +513,9 @@ struct kvm_mmu_page {
 
 ![2020-04-05-00-35-03.png](./images/2020-04-05-00-35-03.png)
 
-分配好`kvm_mmu_page`结构后, 会用其**管理**的**GUEST物理地址空间**的**起始GFN**为key计算一个**hash值**，并上到哈希表`arch.mmu_page_hash[]`上，以便可以**快速的根据gfn**找到**管理该物理地址空间的页表页**；
+分配好`kvm_mmu_page`结构后, 会用其**管理**的**GUEST物理地址空间**的**起始GFN**为key计算一个**hash值**，并上到哈希表`arch.mmu_page_hash[]`上，以便可以**快速的根据gfn**找到**管理该物理地址空间的页表页**.
+
+`mmu_valid_gen`：为有效版本号，KVM维护了一个全局的的gen number(`vcpu->kvm->arch.mmu_valid_gen`)，刚开始是**相同的**(在`kvm_mmu_alloc_page()`中初始化.), 如果该域与全局的gen number不相等，则将该页标记为invalid page。该结构用来快速的碾压掉该页表项页管理的虚拟机物理地址空间。例如，如果想废弃掉当前所有的MMU页结构，需要处理掉所有的MMU页面和对应的映射；但是通过该结构，可以直接将`vcpu->kvm->arch.mmu_valid_gen`加1，那么当前**所有的MMU页结构**都变成了**invalid**，而处理掉页结构的过程可以留给后面的过程（如内存不够时）再处理，可以加快废弃所有MMU页结构的速度。 当`mmu_valid_gen`值达到最大时，可以调用`kvm_mmu_invalidate_zap_all_pages`**手动废弃**掉**所有的MMU页结构**。
 
 # 8. 参考
 
