--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -468,8 +468,8 @@ struct kvm_mmu_page {
         union kvm_mmu_page_role role;
         // 在直接映射中存储线性地址的基地址；在非直接映射中存储guest page table，该PT包含了由该页映射的translation。非直接映射不常见
         gfn_t gfn;
-        // 对应的SPT/EPT页地址，SPT/EPT页的struct page结构中page->private域会反向指向该struct kvm_mmu_page。该域可以指向一个lower-level shadow pages，也可以指向真正的数据page。
-        // 指向影子页表页，页中被分为多个spte。影子页表用的页面称为shadow page，一个页面中分为多个表项，每个表项称为spte，注意不论哪个级别，表项都称为spte
+        // 指向影子页表页地址，页中被分为多个spte。影子页表用的页面称为shadow page，一个页面中分为多个表项，每个表项称为spte，注意不论哪个级别，表项都称为spte
+        // 该域可以指向一个lower-level shadow pages，也可以指向真正的数据page。
         u64 *spt;
         /* hold the gfn of each spte inside spt */
         // 每级的页表页都会管理GUEST物理地址空间的一部分，这段GUEST物理地址空间的起止地址对应的GFN就在这个成员中被记录下来。
@@ -509,7 +509,7 @@ struct kvm_mmu_page {
 
 注意, 这个**影子页表页**的**page struct描述符**中的private指向了管理该页表页的`kvm_mmu_page`成员。
 
-**一个页表页**，会被会被**多个上级页表项引用**到，那么**所有引用该页表页**的**上级页表项**称为`parent_spte`，并且会将所有上级页表项的`parent_spte`存放在当前`kvm_mmu_page`的`parent_ptes`**链表**中, `mmu_page_add_parent_pte()`, 使用参见`__direct_map()`
+`parent_spte`: **一个页表页**，会被会被**多个上级页表项引用**到，那么**所有引用该页表页**的**上级页表项**称为`parent_spte`，并且会将所有上级页表项的`parent_spte`存放在当前`kvm_mmu_page`的`parent_ptes`**链表**中, `mmu_page_add_parent_pte()`, 使用参见`__direct_map()`
 
 ![2020-04-05-00-35-03.png](./images/2020-04-05-00-35-03.png)
 
@@ -517,6 +517,8 @@ struct kvm_mmu_page {
 
 `mmu_valid_gen`：为有效版本号，KVM维护了一个全局的的gen number(`vcpu->kvm->arch.mmu_valid_gen`)，刚开始是**相同的**(在`kvm_mmu_alloc_page()`中初始化.), 如果该域与全局的gen number不相等，则将该页标记为invalid page。该结构用来快速的碾压掉该页表项页管理的虚拟机物理地址空间。例如，如果想废弃掉当前所有的MMU页结构，需要处理掉所有的MMU页面和对应的映射；但是通过该结构，可以直接将`vcpu->kvm->arch.mmu_valid_gen`加1，那么当前**所有的MMU页结构**都变成了**invalid**，而处理掉页结构的过程可以留给后面的过程（如内存不够时）再处理，可以加快废弃所有MMU页结构的速度。 当`mmu_valid_gen`值达到最大时，可以调用`kvm_mmu_invalidate_zap_all_pages`**手动废弃**掉**所有的MMU页结构**。
 
+
+SPT/EPT页的struct page结构中`page->private`域会反向指向该`struct kvm_mmu_page`。
 # 8. 参考
 
 https://blog.csdn.net/leoufung/article/details/52639876?depth_1-utm_source=distribute.pc_relevant.none-task&utm_source=distribute.pc_relevant.none-task
