--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -527,6 +527,7 @@ struct kvm_shadow_walk_iterator {
 ```
 
 当gaddr发生ept violation的时候，使用kvm_shadow_walk_iterator完成影子页表(EPT)的遍历，逐级查找gaddr所对应的页表项EPT，最终索引到叶子页表中对应的页表项SPTE，从而得到gaddr对应的页框的pfn。
+
 对于64bit且没开大页的服务器来说，遍历是从level4页表开始的，一直遍历到level1级页表。level 4  ~ level 2成为非叶子页表，level1称为叶子页表。
 
 当开启大页的时候，就像原来OS的原理一样，由于一个页表项管理范围的扩大，叶子页表的级别会变大，如2M页面，那么在level = 2的时候就是叶子页表，其中的每个页表项管理2M空间；同理 开启1G大页的时候，level = 3 的页表就是叶子页表。
@@ -889,7 +890,7 @@ vmx_handle_exit()  // vmxexit的入口
  |   |   |   |               ├─ link_shadow_page(vcpu, it.sptep, sp);   // 非叶子结点, 下一级页表页不存在时, 将分配的下一级页表页链接到当前entry, 这是HPA
  |   |   |   |           |        ├─ mmu_spte_set(sptep, spte);   // 将sp处理后成为spte, 将其添加到当前entry(sptep), HPA
  |   |   |   |           |        └─ mmu_page_add_parent_pte(vcpu, sp, sptep); // 当前页表页(sp)会被多个上级页表项引用, 将所有上级页表项的parent_spte添加到当前页表的patent_ptes链表中
- |   |   |   |           |   └─ mmu_set_spte();   // 设置最后一级页表项(即表项指向真正的页面), HPA
+ |   |   |   |           |   └─ mmu_set_spte();   // 设置最后一级页表项(即表项指向真正的页面), sptep指向pfn, HPA
  |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
 
