--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -727,7 +727,7 @@ static void shadow_walk_init_using_root(struct kvm_shadow_walk_iterator *iterato
 
 **每一级的遍历**通过一个`kvm_shadow_walk_iterator`进行，其中各个字段的意义已经注明，我们只需要明白**初始状态**
 
-- `iterator.shadow_addr= vcpu->arch.mmu->root_hpa`, 影子页表level4页表页物理地址，EPT情况下，该值就是VMCS的`EPT_pointer`, 指向**EPT页表基地址**，下一个要查找的页表就是当前vCPU的根页表目录
+- `iterator.shadow_addr= vcpu->arch.mmu->root_hpa`, 影子页表level4**页表页物理地址**，EPT情况下，该值就是VMCS的`EPT_pointer`, 指向**EPT页表基地址**，下一个要查找的页表就是当前vCPU的根页表目录
 - `addr`是GPA的客户物理地址, 要查找的**虚拟机物理地址**
 - `level = vcpu->arch.mmu->shadow_root_level`, **影子页表的级数**，EPT情况下这个是**4**是当前iterator所处的级别，其值会随着一层一层的遍历递减。
 
