--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1227,7 +1227,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                 disallowed_hugepage_adjust(it, gfn, &pfn, &level);
                 // 得到虚拟机物理页帧号, 确保对应层级的偏移部分为0，如level=1，则baseaddr的低12位就清零
                 // KVM_PAGES_PER_HPAGE(level)按照上面的分析，就是大页是普通页面多少倍大小，也就是对其关系；
-                // 那么这里计算出来的`gfn`就是按照大页倍数对齐后的起始gfn编号
+                // 那么这里计算出来的gfn就是按照大页倍数对齐后的起始gfn编号
                 // 跳出循环时候, 这个就是最后一级页表项(即直接指向页面的那个)对应的页面起始gfn编号
                 base_gfn = gfn & ~(KVM_PAGES_PER_HPAGE(it.level) - 1);
                 // entry的level和请求的level相等, 说明该entry引起的violation, 
