--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1227,7 +1227,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                 disallowed_hugepage_adjust(it, gfn, &pfn, &level);
                 // 得到虚拟机物理页帧号, 确保对应层级的偏移部分为0，如level=1，则baseaddr的低12位就清零
                 // KVM_PAGES_PER_HPAGE(level)按照上面的分析，就是大页是普通页面多少倍大小，也就是对其关系；
-                // 那么这里计算出来的gfn就是按照大页倍数对齐后的起始gfn编号
+                // 那么这里计算出来的gfn就是按照大页倍数对齐后的起始gfn编号, 具体见前面
                 // 跳出循环时候, 这个就是最后一级页表项(即直接指向页面的那个)对应的页面起始gfn编号
                 base_gfn = gfn & ~(KVM_PAGES_PER_HPAGE(it.level) - 1);
                 // entry的level和请求的level相等, 说明该entry引起的violation, 
@@ -1270,6 +1270,8 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 ```
 
 先调用 `kvm_mmu_hugepage_adjust()` 对level和gfn、pfn做出调整, 里面会调用`gfn_to_memslot_dirty_bitmap`函数判断**当前gfn对应的slot是否可用**，当然绝大多数情况下是可用的。**为什么**要进行这样的判断呢？在if内部可以看到是**获取level**，如果**当前GPN对应的slot可用**，我们就可以获取分配slot的pagesize，然后得到**最低级的level**，比如如果是**2M的页**，那么**level就为2**，为**4K的页**，**level就为1**.
+
+`base_gfn`得到的是按照大页对齐后的页帧号
 
 `for_each_shadow_entry`，用于根据GFN遍历EPT页表的对应项，这点上面有详细解释。
 
