--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -1270,9 +1270,11 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
 先调用 `kvm_mmu_hugepage_adjust()` 对level和gfn、pfn做出调整, 里面会调用`gfn_to_memslot_dirty_bitmap`函数判断**当前gfn对应的slot是否可用**，当然绝大多数情况下是可用的。**为什么**要进行这样的判断呢？在if内部可以看到是**获取level**，如果**当前GPN对应的slot可用**，我们就可以获取分配slot的pagesize，然后得到**最低级的level**，比如如果是**2M的页**，那么**level就为2**，为**4K的页**，**level就为1**.
 
-`base_gfn`得到的是按照大页对齐后的虚拟机物理页帧号,  确保对应层级的偏移部分为0，如level=1，则baseaddr的低12位就清零, 也就是说如果是2M页面(level=2), 则应该是512的倍数(2M页面包含512个4K标准页); 1G页面应该是`2^18`的倍数. 也就是说`base_gfn`是该**页表页**所管理**GUEST物理地址空间的起始gfn**，而**不是**发生**缺页地址**所在**页面的gfn**。缺页gfn是被管理的GEUST物理地址空间中的一个值. 假设`level=2`, 如果 gfn = 513，则base_gfn = 512; 如果 gfn = 511，base_gfn = 0;
+`base_gfn`得到的是按照大页对齐后的虚拟机物理页帧号,  确保对应层级的偏移部分为0，如level=1，则baseaddr的低12位就清零, 也就是说如果是2M页面(level=2), 则应该是512的倍数(2M页面包含512个4K标准页); 1G页面应该是`2^18`的倍数. 也就是说`base_gfn`是该**页表页**所管理**GUEST物理地址空间的起始gfn**，而**不是**发生**缺页地址**所在**页面的gfn**。缺页gfn是被管理的GEUST物理地址空间中的一个值. 假设`level=2`, 如果 gfn = 513，则`base_gfn` = 512; 如果 gfn = 511，base_gfn = 0;
 
 ![2020-04-05-17-02-34.png](./images/2020-04-05-17-02-34.png)
+
+KVM中利用起始gfn(base_gfn)在哈希表`arch.mmu_page_hash[]`上，快速的查找**管理该物理地址空间的页表页**是否**已经被分配**了，代码如下
 
 `for_each_shadow_entry`，用于根据GFN遍历EPT页表的对应项，这点上面有详细解释。
 
