--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -448,7 +448,11 @@ a = a & ~(b-1) ；
 ......
 ```
 
-`KVM_PAGES_PER_HPAGE(level) `按照上面的分析，就是**大页**是**普通页面多少倍大小**，也就是对其关系；那么这里计算出来的`gfn`就是按照**大页倍数对齐后**的**起始gfn编号**。
+`KVM_PAGES_PER_HPAGE(level) `按照上面的分析，就是**大页**是**普通页面多少倍大小**，也就是对其关系；那么这里计算出来的`gfn`就是按照**大页倍数对齐后**的**起始gfn编号**。**起始pfn**是该**页表页**所管理**GUEST物理地址空间的起始gfn**，而**不是**发生**缺页地址**所在**页面的gfn**。**缺页gfn**是**被管理的GEUST物理地址空间**中的**一个值**. 
+
+假设`level=2`, 如果 gfn = 513，则`base_gfn` = 512; 如果 gfn = 511，base_gfn = 0;
+
+![2020-04-05-17-02-34.png](./images/2020-04-05-17-02-34.png)
 
 # 5. 通过gaddr来索引shadow page table (EPT)
 
@@ -1207,6 +1211,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
         struct kvm_shadow_walk_iterator it;
         struct kvm_mmu_page *sp;
         int level, ret;
+        // 虚拟机物理页帧号(这是全局唯一的, 以4K为一个页面)
         gfn_t gfn = gpa >> PAGE_SHIFT;
         gfn_t base_gfn = gfn;
 
@@ -1225,7 +1230,6 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
                  * large page, as the leaf could be executable.
                  */
                 disallowed_hugepage_adjust(it, gfn, &pfn, &level);
-                // KVM_PAGES_PER_HPAGE(level)按照上面的分析，就是大页是普通页面多少倍大小，也就是对其关系；
                 // 那么这里计算出来的gfn就是按照大页倍数对齐后的起始gfn编号, 具体见前面
                 // 跳出循环时候, 这个就是最后一级页表项(即直接指向页面的那个)对应的页面起始gfn编号
                 base_gfn = gfn & ~(KVM_PAGES_PER_HPAGE(it.level) - 1);
@@ -1270,7 +1274,7 @@ static int __direct_map(struct kvm_vcpu *vcpu, gpa_t gpa, int write,
 
 先调用 `kvm_mmu_hugepage_adjust()` 对level和gfn、pfn做出调整, 里面会调用`gfn_to_memslot_dirty_bitmap`函数判断**当前gfn对应的slot是否可用**，当然绝大多数情况下是可用的。**为什么**要进行这样的判断呢？在if内部可以看到是**获取level**，如果**当前GPN对应的slot可用**，我们就可以获取分配slot的pagesize，然后得到**最低级的level**，比如如果是**2M的页**，那么**level就为2**，为**4K的页**，**level就为1**.
 
-`base_gfn`得到的是按照大页对齐后的虚拟机物理页帧号,  确保对应层级的偏移部分为0，如level=1，则baseaddr的低12位就清零, 也就是说如果是2M页面(level=2), 则应该是512的倍数(2M页面包含512个4K标准页); 1G页面应该是`2^18`的倍数. 也就是说`base_gfn`是该**页表页**所管理**GUEST物理地址空间的起始gfn**，而**不是**发生**缺页地址**所在**页面的gfn**。缺页gfn是被管理的GEUST物理地址空间中的一个值. 假设`level=2`, 如果 gfn = 513，则`base_gfn` = 512; 如果 gfn = 511，base_gfn = 0;
+`base_gfn`得到的是按照**大页对齐后的虚拟机物理页帧号**,  确保对应层级的偏移部分为0，如level=1，则baseaddr的低12位就清零, 也就是说如果是2M页面(level=2), 则应该是512的倍数(2M页面包含512个4K标准页); 1G页面应该是`2^18`的倍数. 也就是说`base_gfn`是该**页表页**所管理**GUEST物理地址空间的起始gfn**，而**不是**发生**缺页地址**所在**页面的gfn**。缺页gfn是被管理的GEUST物理地址空间中的一个值. 假设`level=2`, 如果 gfn = 513，则`base_gfn` = 512; 如果 gfn = 511，base_gfn = 0;
 
 ![2020-04-05-17-02-34.png](./images/2020-04-05-17-02-34.png)
 
